SERVER-88202: Fix possible integer overflow in BSON validation (#20226)

GitOrigin-RevId: e6795d83e472c2976656e5d652e29fb02f91436f