src/mongo/bson/bson_validate.cpp
@@ -467,7 +467,8 @@ public:
         if (_currFrame != _frames.begin()) {
             // We know that type was kObject or kArray, so size is fieldname, type,
             // and a stored int
-            int64_t size = 2 + ConstDataView(_data + 2).read<LittleEndian<int32_t>>();
+            int64_t size =
+                static_cast<int64_t>(ConstDataView(_data + 2).read<LittleEndian<int32_t>>()) + 2;
             uassert(InvalidBSON,
                     "BSON literal content exceeds buffer size",
                     (size_t)size <= _maxLength);
